manifests/templates/deployment.yaml
---
# Source: helm for kubernetes/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dara-test-again-a5c3db8f
  labels:
    app: dara-test-again-a5c3db8f
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: dara-test-again-a5c3db8f
  template:
    metadata:
      labels:
        app: dara-test-again-a5c3db8f
    spec:
      serviceAccountName: ingress-manager
      containers:
        - name: dara-test-again-a5c3db8f
          image: docker.io/phengbunath/dara-test-again-a5c3db8f:1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
