manifests/templates/ingress.yaml
---
# Source: helm for kubernetes/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dara-test-again-a5c3db8f                  # Ingress name
  labels:
    app: dara-test-again-a5c3db8f
spec:
  ingressClassName: nginx   # Optional ingressClass
  rules:
    - host: "dara-test-again-a5c3db8f.smartops.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dara-test-again-a5c3db8f               # Links to Service name dynamically
                port:
                  number: 3000  # Links to service port dynamically
